[package]
name = "del-ls"
version = "0.1.4"
edition = "2021"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
license = "MIT"
repository = "https://github.com/nobuyuki83/del-ls"
description = "sparse solver library for research prototyping"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.6"
num-traits = "0.2.19"
